link-fixes for images

--- a/auftritte/auftritte_2001_3/auftritte_2001_3.html
+++ b/auftritte/auftritte_2001_3/auftritte_2001_3.html
@@ -2,8 +2,8 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2001_3_1.jpg')" target="_self"><img alt="Buchen &ndash; Caf&eacute; Pfeiffer" src="auftritte_2001_3_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2001_3_2.jpg')" target="_self"><img alt="Buchen &ndash; Caf&eacute; Pfeiffer" src="auftritte_2001_3_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2001_3_1.jpg')" target="_self"><img alt="Buchen &ndash; Caf&eacute; Pfeiffer" src="auftritte/auftritte_2001_3_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2001_3_2.jpg')" target="_self"><img alt="Buchen &ndash; Caf&eacute; Pfeiffer" src="auftritte/auftritte_2001_3_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
