--- a/auftritte/auftritte_2002_2/auftritte_2002_2.html
+++ b/auftritte/auftritte_2002_2/auftritte_2002_2.html
@@ -2,31 +2,31 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2002_2_1.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2002_2_2.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2002_2_3.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2002_2_4.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_1.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_2.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_3.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_4.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2002_2_5.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2002_2_6.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2002_2_7.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_5.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_6.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_7.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2002_2_8.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2002_2_9.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2002_2_10.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2002_2_11.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_8.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_9.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_10.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_11.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2002_2_12.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2002_2_13.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte_2002_2_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_12.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2002_2_13.jpg')" target="_self"><img alt="Merchingen &ndash; Bienenstockfest" src="auftritte/auftritte_2002_2_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
