--- a/auftritte/auftritte_2003_2/auftritte_2003_2.html
+++ b/auftritte/auftritte_2003_2/auftritte_2003_2.html
@@ -2,7 +2,7 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2003_2_1.jpg')" target="_self"><img alt="Stuttgart &ndash; Home and Family Messe" src="auftritte_2003_2_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2003_2_1.jpg')" target="_self"><img alt="Stuttgart &ndash; Home and Family Messe" src="auftritte/auftritte_2003_2_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
