--- a/auftritte/auftritte_2004_2/auftritte_2004_2.html
+++ b/auftritte/auftritte_2004_2/auftritte_2004_2.html
@@ -2,68 +2,68 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_2_1.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_2.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_3.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_4.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_1.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_2.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_3.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_4.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_2_5.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_6.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_7.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_5.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_6.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_7.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_2_8.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_9.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_10.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_11.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_8.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_9.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_10.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_11.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_2_12.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_13.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_14.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_14_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_12.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_13.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_14.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_14_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_2_15.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_15_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_16.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_16_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_15.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_15_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_16.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_16_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_2_17.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_17_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_18.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_18_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_19.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_19_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_17.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_17_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_18.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_18_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_19.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_19_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_2_20.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_20_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_21.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_21_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_22.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_22_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_23.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_23_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_20.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_20_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_21.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_21_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_22.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_22_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_23.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_23_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_2_24.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_24_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_25.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_25_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_26.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_26_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_24.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_24_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_25.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_25_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_26.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_26_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_2_27.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_27_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_28.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_28_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_29.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_29_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_2_30.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte_2004_2_30_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_27.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_27_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_28.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_28_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_29.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_29_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_2_30.jpg')" target="_self"><img alt="Osterburken &ndash; mit Barbed Wire" src="auftritte/auftritte_2004_2_30_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
