--- a/auftritte/auftritte_2001_1/auftritte_2001_1.html
+++ b/auftritte/auftritte_2001_1/auftritte_2001_1.html
@@ -2,15 +2,15 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2001_1_1.jpg')" target="_self"><img alt="Buchen &ndash; BGB Schulfest" src="auftritte_2001_1_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2001_1_2.jpg')" target="_self"><img alt="Buchen &ndash; BGB Schulfest" src="auftritte_2001_1_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2001_1_3.jpg')" target="_self"><img alt="Buchen &ndash; BGB Schulfest" src="auftritte_2001_1_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2001_1_1.jpg')" target="_self"><img alt="Buchen &ndash; BGB Schulfest" src="auftritte/auftritte_2001_1_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2001_1_2.jpg')" target="_self"><img alt="Buchen &ndash; BGB Schulfest" src="auftritte/auftritte_2001_1_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2001_1_3.jpg')" target="_self"><img alt="Buchen &ndash; BGB Schulfest" src="auftritte/auftritte_2001_1_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2001_1_4.jpg')" target="_self"><img alt="Buchen &ndash; BGB Schulfest" src="auftritte_2001_1_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2001_1_5.jpg')" target="_self"><img alt="Buchen &ndash; BGB Schulfest" src="auftritte_2001_1_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2001_1_4.jpg')" target="_self"><img alt="Buchen &ndash; BGB Schulfest" src="auftritte/auftritte_2001_1_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2001_1_5.jpg')" target="_self"><img alt="Buchen &ndash; BGB Schulfest" src="auftritte/auftritte_2001_1_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
