--- a/auftritte/auftritte_2001_2/auftritte_2001_2.html
+++ b/auftritte/auftritte_2001_2/auftritte_2001_2.html
@@ -2,10 +2,10 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2001_2_1.jpg')" target="_self"><img alt="Florida &ndash; Mars Music" src="auftritte_2001_2_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2001_2_2.jpg')" target="_self"><img alt="Florida &ndash; Mars Music" src="auftritte_2001_2_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2001_2_3.jpg')" target="_self"><img alt="Florida &ndash; Mars Music" src="auftritte_2001_2_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2001_2_4.jpg')" target="_self"><img alt="Florida &ndash; Mars Music" src="auftritte_2001_2_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2001_2_1.jpg')" target="_self"><img alt="Florida &ndash; Mars Music" src="auftritte/auftritte_2001_2_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2001_2_2.jpg')" target="_self"><img alt="Florida &ndash; Mars Music" src="auftritte/auftritte_2001_2_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2001_2_3.jpg')" target="_self"><img alt="Florida &ndash; Mars Music" src="auftritte/auftritte_2001_2_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2001_2_4.jpg')" target="_self"><img alt="Florida &ndash; Mars Music" src="auftritte/auftritte_2001_2_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
