--- a/auftritte/auftritte_2004_1/auftritte_2004_1.html
+++ b/auftritte/auftritte_2004_1/auftritte_2004_1.html
@@ -2,8 +2,8 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_1_1.jpg')" target="_self"><img alt="Hainstadt &ndash; Abifeier BGB vor Shark" src="auftritte_2004_1_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_1_2.jpg')" target="_self"><img alt="Hainstadt &ndash; Abifeier BGB vor Shark" src="auftritte_2004_1_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_1_1.jpg')" target="_self"><img alt="Hainstadt &ndash; Abifeier BGB vor Shark" src="auftritte/auftritte_2004_1_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte_2004_1_2.jpg')" target="_self"><img alt="Hainstadt &ndash; Abifeier BGB vor Shark" src="auftritte/auftritte_2004_1_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
