--- a/auftritte/auftritte_2002_1/auftritte_2002_1.html
+++ b/auftritte/auftritte_2002_1/auftritte_2002_1.html
@@ -2,9 +2,9 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2002_1_1.jpg')" target="_self"><img alt="Polsing Trendel &ndash; Kanap&eacute;efest" src="auftritte/auftritte_2002_1_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2002_1_2.jpg')" target="_self"><img alt="Polsing Trendel &ndash; Kanap&eacute;efest" src="auftritte/auftritte_2002_1_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2002_1_3.jpg')" target="_self"><img alt="Polsing Trendel &ndash; Kanap&eacute;efest" src="auftritte/auftritte_2002_1_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2002_1/auftritte_2002_1_1.jpg')" target="_self"><img alt="Polsing Trendel &ndash; Kanap&eacute;efest" src="auftritte/auftritte_2002_1/auftritte_2002_1_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2002_1/auftritte_2002_1_2.jpg')" target="_self"><img alt="Polsing Trendel &ndash; Kanap&eacute;efest" src="auftritte/auftritte_2002_1/auftritte_2002_1_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2002_1/auftritte_2002_1_3.jpg')" target="_self"><img alt="Polsing Trendel &ndash; Kanap&eacute;efest" src="auftritte/auftritte_2002_1/auftritte_2002_1_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
